# ARIAC_assigment

./: README.md  final_spring2024.yaml
final_2/: CMakeLists.txt  package.xml
final_2/doc/: README.txt
final_2/final_2/: ariac_interface_util.py  process_order.py  sensor_read.py  submit_orders.py  yolo_combined.py  yolonode.py  yolonode_leftbin.py  yolonode_tray1.py  yolonode_tray2.py
final_2/include/: robot_ariac.hpp  utils.hpp
final_2/launch/: ariac_interface.launch.py  ariac_yolo.launch.py  aruko.launch.py  move_robot.launch.py
final_2/src/: robot_ariac.cpp
robot_commander_msgs/: CMakeLists.txt
robot_commander_msgs/srv/: PickPart.srv  PlacePart.srv
rwa3_2/: CMakeLists.txt  package.xml
rwa3_2/doc/: README.txt
rwa3_2/launch/: ariac_interface.launch.py
rwa3_2/rwa3_2/: ariac_interface.py  ariac_interface_util.py  comp_state.py  custom_timer.py  fulfill_orders.py  read_store_orders.py  ship_orders.py  submit_orders.py  utils.py
rwa3_group2/: CMakeLists.txt  package.xml
rwa3_group2/rwa3_group2/: competition_start.py  utils.py
rwa3_group2/script/: rwa3_demo.py
rwa4_2/: CMakeLists.txt  package.xml
rwa4_2/doc/: README.txt
rwa4_2/launch/: ariac_interface.launch.py
rwa4_2/rwa4_2/: ariac_interface_main.py  ariac_interface_util.py  read_store_orders.py  sensor_read.py  ship_orders.py  utils.py
rwa5_2/: CMakeLists.txt  package.xml  requirements.txt  rwa4_spring2024.yaml
rwa5_2/config/: new_sensors.yaml  sensors.yaml
rwa5_2/doc/: README.txt
rwa5_2/include/: move_floor.hpp  new.hpp  robot_ariac.hpp  utils.hpp
rwa5_2/launch/: ariac_interface.launch.py  ariac_yolo.launch.py  mov_launch.py  move_robot.launch.py
rwa5_2/rwa5_2/: Move_Robot.py  ariac_interface_util.py  move.py  process_order.py  read_store_orders.py  robot_move.py  sensor_read.py  ship_orders.py  submit_orders.py  utils.py  yolo_combined.py  yolonode.py  yolonode_leftbin.py  yolonode_tray1.py  yolonode_tray2.py
rwa5_2/src/: Req.txt  floor_robot.cpp  move_floor.cpp  new.cpp  robot_ariac.cpp
rwa5_2/srv/: PickPlace.srv
