<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rwa5_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yashveerjain321@gmail.com">Yashveer Jain</maintainer>
  <maintainer email="sharmamayank1301@gmail.com">Mayank Sharma</maintainer>
  <maintainer email="syed029@umd.edu">Abraruddin Syed</maintainer>
  <maintainer email="dhruv337@gmail.com">Dhruv Sharma</maintainer>
  
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  
  <depend>ariac_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclpy</depend>
  <depend>orocos_kdl</depend>
  <depend>python3-pykdl</depend>
  <depend>geometry_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>robot_commander_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
